--- a/web/bible-on-site/src/app/components/navbar.module.css
+++ b/web/bible-on-site/src/app/components/navbar.module.css
@@ -8,6 +8,7 @@
   opacity: 0;
   transition: all 0.2s;
   cursor: pointer;
+  pointer-events: none;
 }
 
 .hamburgerMenu .menuToggle {
@@ -44,6 +45,7 @@
   opacity: 0.3;
   z-index: 10;
   transition: opacity 0.25s ease-in-out;
+  pointer-events: auto;
 }
 
 .menuBox {
